Payment partial working now.

--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -1,6 +1,5 @@
-﻿<script src="https://js.stripe.com/v3/"></script>
-<form name="DonationForm">
-    Optional
+﻿ <form name="DonationForm">
+ Optional
     <div class="group">
         <label>
             <span>Name</span>
