--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -248,19 +248,12 @@ else
         </div>
     </div>
 }
-@if (Model.ActiveTrip != null) {
-<div id="donateToggle">
-    @Html.Partial("_PaymentPartial")
-    <script language="JavaScript" type="text/javascript">
-        
-            var pubKey = '@System.Configuration.ConfigurationManager.AppSettings["PubKey"]';
-            var tripId = '@Model.ActiveTrip.Trip.Id';
-        
-    </script>
-</div>
-}
+
+
 
 <!-----------Partial View For Payment------------->
+@if (Model.ActiveTrip != null)
+{
 <div id="donateToggle">
     @Html.Partial("_PaymentPartial")
     <script language="JavaScript" type="text/javascript">
@@ -268,5 +261,5 @@ else
         var tripId = '@Model.ActiveTrip.Trip.Id';
         var userName = '@ViewBag.UserName';
     </script>
-</div>*@
-
+</div>
+}
