Cancellation Email sends but db query is returning wrong email for admin

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -227,7 +227,7 @@ else
                         <p>
                             @if (donation.HaveThanked == false)
                     {
-                                @Ajax.ActionLink("Thank for Donation", "Index", new { donationId = donation.Id },
+                                @Ajax.ActionLink("Say Thanks", "Index", new { donationId = donation.Id },
                     new AjaxOptions
                     {
                         UpdateTargetId = "myModel",
