--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -6,16 +6,16 @@
             <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
         </label>
         <label>
-            <span>Email</span>
-            <input id="DonorEmail" class="field" placeholder="Example@Example.com" type="email" />
-        </label>
-        <label>
             <span>Phone</span>
             <input id="DonorPhoneNumber" class="field" placeholder="(555)-555-5555" type="tel" min="10" max="10" />
         </label>
     </div>
     Required
     <div class="group">
+        <label>
+            <span>Email</span>
+            <input id="DonorEmail" class="field" placeholder="Example@Example.com" type="email" required />
+        </label>
         <label>
             <span>Amount</span>
             <input class="field" placeholder="25.00" id="DonationAmount" type="number" min="0" required />
