--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -261,28 +261,61 @@ else
             var tripId = '@Model.ActiveTrip.Trip.Id';
             var userName = '@ViewBag.UserName';
             var paymentMsg = '@ViewBag.PaymentMsg';
+            var email = '@ViewBag.Email'
 
         </script>
     </div>
 }
 
 
-
-            <div id="paymentMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px"  data-backdrop="static" 
-   data-keyboard="false" >
-                <div class="modal-dialog modal-sm" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Payment Status</h4>
-                        </div>
-                        <div class="modal-body">
-                            <p>
+<!-----------Successful Payment Message------------->
+<div id="successMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
+     data-keyboard="false">
+    <div class="modal-header modal-header-success">
+        <div class="modal-dialog modal-sm" role="document">
+            <div id="successModalContent" class="modal-content">
+                <div class="modal-header modal-header-success">
+                    <h1><i class="glyphicon glyphicon-thumbs-up"></i>Payment Success</h1>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body">
+                        <h4 class="display-3" >
                             @ViewBag.PaymentMsg
-                            </p>
-                            <p>
-                            <button type="button" class="btn btn-default" id="payMsgBtn">Ok</button>
-                            </p>
-                        </div>
+                        </h4>
+                        <p>
+                            <button type="button" class="btn btn-danger" id="approveMsgBtn">X Close</button>
+                        </p>
+                        <hr />
+                        <hr />
+                    </div>
                 </div>
             </div>
-     
+        </div>
+        </div>
+    </div>
+
+<!-----------Failed Payment Message------------->
+<div id="failedMsgModal" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" height="50px" data-backdrop="static"
+     data-keyboard="false">
+    <div class="modal-header modal-header-success">
+        <div class="modal-dialog modal-sm" role="document">
+            <div id="failedModalContent" class="modal-content">
+                <div class="modal-header modal-header-danger">
+                    <h1><i class="glyphicon glyphicon-thumbs-down"></i>There is a problem with the Payment</h1>
+                </div>
+                <div class="modal-body">
+                    <div class="modal-body">
+                        <h4 class="display-3">
+                            @ViewBag.PaymentMsg
+                        </h4>
+                        <p>
+                            <button type="button" class="btn btn-warning" id="declineMsgBtn">X Close</button>
+                        </p>
+                        <hr />
+                        <hr />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
