--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -233,6 +233,7 @@ button {
     margin-bottom: 55px;
 }
 
+/*css for donation success/fail*/
 #successModalContent {
     top: 10px;
     left: 50%;
@@ -262,7 +263,15 @@ button {
   margin-right: -4px;
 }
 
-
+/*donation back button*/
+.btn-circle {
+    width: 50px;
+  height: 50px;
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 25px;
+}
 
 
 
