--- a/SendMe/Views/Shared/_PaymentPartial.cshtml
+++ b/SendMe/Views/Shared/_PaymentPartial.cshtml
@@ -1,15 +1,4 @@
 ﻿ <form name="DonationForm">
- Optional
-    <div class="group">
-        <label>
-            <span>Name</span>
-            <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
-        </label>
-        <label>
-            <span>Phone</span>
-            <input id="DonorPhoneNumber" class="field" placeholder="(555)-555-5555" type="tel" min="10" max="10" />
-        </label>
-    </div>
     Required
     <div class="group">
         <label>
@@ -25,8 +14,20 @@
             <div id="card-element" class="field"></div>
         </label>
     </div>
-    <button type="submit">Donate</button>
+     Optional
+     <div class="group">
+         <label>
+             <span>Name</span>
+             <input name="DonorName" id="DonorName" class="field" placeholder="Mic Anderson" type="text" maxlength="30" />
+         </label>
+         <label>
+             <span>Phone</span>
+             <input id="DonorPhoneNumber" class="field" placeholder="(555)-555-5555" type="tel" min="10" max="10" />
+         </label>
+     </div>
      <strong class="error"></strong>
-    
-
+     <div class="btn-group btn-group-lg" role="group">
+         <button id="paymentBackBtn" type="button" class="btn btn-danger btn-circle" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i></button>
+         <button type="submit" class="btn btn-success btn-circle" data-toggle="tooltip" data-placement="right" title="Submit Donation"><i class="glyphicon glyphicon-ok"></i></button>
+     </div>
 </form>
