Progress Bar now working.

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -49,8 +49,7 @@
 </script>
 
 <div class="container">
-    <div id="goal">
-    </div>
+    <div id="goal"></div>
 </div>
 
 <!-----------ACTIVE TRIP------------->
@@ -123,6 +122,7 @@ else
             <p id="attachMenu">
                 @Model.ActiveTrip.Trip.Destination <br />
 
+                <!--MAP-->
                 <div id="map" style="width: 350px; height: 350px; border: 2px solid #1abbac;"></div><br />
 
                 $@Model.ActiveTrip.Trip.TargetAmnt
