--- a/SendMe/Content/GoalProgress.css
+++ b/SendMe/Content/GoalProgress.css
@@ -1,9 +1,9 @@
 ﻿.goalProgress {
-	background: #f7f7f7;
+	background: #DADEE0;
 	padding: 5px;
 }
 div.progressBar {
-	background: #1abbac;
+	background: #1ABBAC;
 	color: #fff;
 	font-size: 1.5em;
 	font-family: 'helvetica neue', helvetica, arial, sans-serif;
@@ -12,7 +12,7 @@ div.progressBar {
 	padding: 10px;
 	display: block;
 	overflow: hidden;
-	width: 20px;
+	width: 60px;
 }
 span.goalAmount {
 	display: none;
