Thank You message now passes to email method.

--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -244,7 +244,7 @@ else
                                         {
                                             <div class="form-actions no-color">
                                                 <label for="#thnksMsg">Add a personal message!</label>
-                                                <textarea rows="5" id="thanksMsg"></textarea>
+                                                <textarea rows="5" id="thanksMsg" name="thxMsg"></textarea>
                                                 <button type="submit" class="btn btn-success" id="sendThanksBtn" value="sendThanks">
                                                     <span class="glyphicon glyphicon-send"> Send</span>
                                                 </button>
